# python-bybit-rsi

./: .gitignore  main.py  pyproject.toml
app/pkg/: requestor.py  settings.py  telegram_bot.py
app/services/: chart.py  parser.py  rsi.py
