[tool.poetry]
name = "python-bybit-rsi"
version = "0.1.0"
description = ""
authors = ["gabaaba"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.28.1"
pandas = "^2.2.3"
ta-lib = "^0.6.3"
python-telegram-bot = "^21.10"
python-dotenv = "^1.0.1"
pydantic = "^2.10.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
